# photodynam

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: on_pr.yml
include/: elliptic.h  icirc.h  kepcart.h  mttr.h  n_body.h  n_body_lc.h  n_body_state.h  scpolyint.h
photodynam/: photodynam.cpp
pywrapper/: Makefile  libphotodynam.cpp
source/: Makefile  icirc.cpp
tests/: test_photodynam.py
